see wagtail error pages app

--- a/libraries/libraries/templates/404.html
+++ b/libraries/libraries/templates/404.html
@@ -1,3 +1,4 @@
+<!-- see: https://github.com/alexgleason/wagtailerrorpages -->
 {% extends "base.html" %}
 
 {% block body_class %}template-404{% endblock %}
