--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -32,7 +32,9 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        {% block content %}{% endblock %}
+        <main role="main">
+            {% block content %}{% endblock %}
+        </main>
 
         {# Global javascript #}
         <script
