footer component templates

--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -36,6 +36,8 @@
             {% block content %}{% endblock %}
         </main>
 
+        {% include 'components/footer/footer.html' %}
+
         {# Global javascript #}
         <script
 			src="https://code.jquery.com/jquery-3.2.1.min.js"
