--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -29,8 +29,10 @@
         {% endblock %}
     </head>
 
-    <body class="{% block body_class %}{% endblock %}">
+    <body class="page js-page {% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
+
+        {% include 'components/header/header.html' %}
 
         <main role="main">
             {% block content %}{% endblock %}
