home - mostly comments, small tweaks

--- a/libraries/home/templates/home/home-news.html
+++ b/libraries/home/templates/home/home-news.html
@@ -2,6 +2,8 @@
 
 	<ul class="home-news__list">
 		{% comment %}
+		@TODO once we have actual blog posts to pull from
+		this section should pull the most recent two for display
 			{{#home-news}}
 				{{> home/home-news-item }}
 			{{/home-news}}
