--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body_class %}template-homepage{% endblock %}
+{% block body_class %}homepage{% endblock %}
 
 {% block content %}
     {% include "home/home-hero.html" %}
