semi-fix search button not displaying
search page itself still needs its template

--- a/libraries/home/templates/home/home_page.html
+++ b/libraries/home/templates/home/home_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body_class %}homepage{% endblock %}
+{% block body_class %}home{% endblock %}
 
 {% block content %}
     {% include "home/home-hero.html" %}
