--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -29,7 +29,7 @@
         {% endblock %}
     </head>
 
-    <body class="page js-page {% block body_class %}{% endblock %}">
+    <body class="page js-page page--{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
         {% include 'components/header/header.html' %}
