--- a/libraries/search/templates/search/search.html
+++ b/libraries/search/templates/search/search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static wagtailcore_tags %}
 
-{% block body_class %}template-searchresults{% endblock %}
+{% block body_class %}search{% endblock %}
 
 {% block title %}Search{% endblock %}
 
