better <title> & <meta> for base template

--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -12,13 +12,11 @@
             {% block title %}
                 {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
             {% endblock %}
-            {% block title_suffix %}
-                {% with self.get_site.site_name as site_name %}
-                    {% if site_name %}- {{ site_name }}{% endif %}
-                {% endwith %}
-            {% endblock %}
+            {% block title_suffix %}| CCA Libraries & Instructional Technology{% endblock %}
         </title>
-        <meta name="description" content="" />
+        {% if self.search_description %}
+            <meta name="description" content="{{self.search_description}}" />
+        {% endif %}
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         {# Global stylesheets #}
