--- a/libraries/libraries/templates/components/search/search-input.html
+++ b/libraries/libraries/templates/components/search/search-input.html
@@ -4,7 +4,7 @@
 		name="q"
 		placeholder="Enter a search term..."
 		type="text"
-		value="{{ query }}"
+		value="{{ search_query }}"
 	/>
 	<button class="search-input__submit">
 		Search
