--- a/libraries/categories/templates/categories/collections_page.html
+++ b/libraries/categories/templates/categories/collections_page.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="wrapper wrapper--collections">
-        <ul class="collections-nav">
+        <ul class="collections-nav js-collections-nav">
             {% for collection in page.collections.all %}
                 {% include 'categories/collections-nav-item.html'%}
             {% endfor %}
