--- a/libraries/categories/templates/categories/service-row-item.html
+++ b/libraries/categories/templates/categories/service-row-item.html
@@ -1,21 +1,21 @@
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailimages_tags %}
 
 <li class="service-row-item">
 	<h2 class="service-row-item__title">
-		{{ title }}
+		{{ service.title }}
 	</h2>
 	<p class="service-row-item__text">
-		{{ text }}
+		{{ service.search_description }}
 	</p>
 
-	{{#image}}
+	{% if service.image %}
 		<div class="service-row-item__image-wrapper">
-			<img
-				src="{{ image }}"
-				alt="{{ title }}"
-				class="service-row-item__image"
-			/>
+			{% image service.image class="service-row-item__image" %}
 		</div>
+	{% endif %}
+
+	{# @TODO associate services with staff members #}
+	{% if service.staff %}
 		<div class="service-row-item__text-wrapper">
 			<p class="service-row-item__name">
 				{{ name }}
@@ -24,5 +24,5 @@
 				{{ position }}
 			</p>
 		</div>
-	{{/image}}
+	{% endif %}
 </li>
