--- a/libraries/categories/templates/categories/services-row.html
+++ b/libraries/categories/templates/categories/services-row.html
@@ -2,13 +2,13 @@
 
 <li class="service-row">
 	<h2 class="service-row__title">
-		{{ type.title }}
+		{{ row.title }}
 	</h2>
 	<p class="service-row__summary">
-		{{ type.summary|richtext }}
+		{{ row.specific.summary }}
 	</p>
 	<ul class="service-row__items">
-		{% for service in type.services %}
+		{% for service in row.get_children.live %}
 			{% include 'categories/service-row-item.html' %}
 		{% endfor %}
 	</ul>
