--- a/libraries/libraries/templates/components/footer/footer.html
+++ b/libraries/libraries/templates/components/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer js-footer">
 	<div class="wrapper">
 		<ul class="footer__sections">
 			{% include 'components/footer/footer-links.html' %}
