--- a/libraries/categories/templates/categories/row.html
+++ b/libraries/categories/templates/categories/row.html
@@ -9,7 +9,7 @@
 	</p>
 	<ul class="service-row__items">
 		{% for service in row.get_children.live %}
-			{% include 'categories/service-row-item.html' %}
+			{% include 'categories/row-item.html' %}
 		{% endfor %}
 	</ul>
 </li>
