--- a/libraries/home/templates/home/home-info-box.html
+++ b/libraries/home/templates/home/home-info-box.html
@@ -6,7 +6,7 @@
 			{# @TODO should these a[href] be a reference, not a hard-coded value? #}
 			<a
 				class="home-info-box__item-link"
-				href="/services"
+				href="/services/"
 				title="Services"
 			>
 				Services
@@ -20,7 +20,7 @@
 		<h2 class="home-info-box__item-title">
 			<a
 				class="home-info-box__item-link"
-				href="/collections"
+				href="/collections/"
 				title="Collections"
 			>
 				Collections
@@ -34,7 +34,7 @@
 		<h2 class="home-info-box__item-title">
 			<a
 				class="home-info-box__item-link"
-				href="/about-us"
+				href="/about-us/"
 				title="About Us"
 			>
 				About Us
