--- a/libraries/libraries/templates/components/header/header.html
+++ b/libraries/libraries/templates/components/header/header.html
@@ -8,7 +8,7 @@
 			<img
 				alt="CCA Libraries Logo"
 				class="header__logo"
-				src="/images/logo.png"
+				src="/images/logo.jpg"
 			/>
 		</a>
 
