cats - struggling through streamfields
notably, AboutUsPage template has problems
it'd be better to have the body be a RichTextField
but that requires some migration magic to do the conversion

--- a/libraries/categories/templates/categories/about_us_page.html
+++ b/libraries/categories/templates/categories/about_us_page.html
@@ -21,8 +21,13 @@
     			</div>
             {% endif %}
 
-            {% include_block page.body %}
-
+            <div class="about-us-text-wrapper">
+                {% for block in page.body %}
+                    <div class="about-us-text">
+                        {% include_block block %}
+                    </div>
+                {% endfor %}
+            </div>
 		</div>
 	</div>
 
