--- a/libraries/categories/templates/categories/special_collections_page.html
+++ b/libraries/categories/templates/categories/special_collections_page.html
@@ -10,6 +10,8 @@
         </h1>
     </div>
 
+    {# @TODO insert brief search_description <p> here, too #}
+
     <div class="wrapper wrapper--collections">
         <ul class="collections-nav js-collections-nav">
             {% for collection in page.special_collections.all %}
