--- a/libraries/categories/templates/categories/row.html
+++ b/libraries/categories/templates/categories/row.html
@@ -8,7 +8,7 @@
 		{{ row.specific.summary }}
 	</p>
 	<ul class="service-row__items">
-		{% for service in row.get_children.live %}
+		{% for item in row.get_children.live %}
 			{% include 'categories/row-item.html' %}
 		{% endfor %}
 	</ul>
