cats - better category color-coding in templates

--- a/libraries/categories/templates/categories/service_page.html
+++ b/libraries/categories/templates/categories/service_page.html
@@ -1,17 +1,17 @@
-{% load wagtailcore_tags wagtailimages_tags %}
 {% extends "base.html" %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
-{% block body_class %}services{% endblock %}
+{% block body_class %}page--{{ page.category.slug }}{% endblock %}
 
 {# we basically reuse the blog_post template & retain its class names #}
 {% block content %}
 	<div class="wrapper wrapper--blog">
-		<div class="blog-page">
-			{# include breadcrumbs for deeply nested (grandchild) pages #}
-	        {% if page.get_ancestors|length > 2 %}
-	            {% include 'categories/breadcrumbs.html' %}
-	        {% endif %}
+		{# include breadcrumbs for deeply nested (grandchild) pages #}
+		{% if page.get_ancestors|length > 2 %}
+			{% include 'categories/breadcrumbs.html' %}
+		{% endif %}
 
+		<div class="blog-page">
 			<article class="blog-post">
 				{% image page.main_image width-700 class="blog-post__image" %}
 
