--- a/libraries/categories/templates/categories/special_collections_page.html
+++ b/libraries/categories/templates/categories/special_collections_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body_class %}collections{% endblock %}
+{% block body_class %}page--{{ page.category.slug }}{% endblock %}
 
 {% block content %}
 
