--- a/libraries/categories/templates/categories/about_us_page.html
+++ b/libraries/categories/templates/categories/about_us_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags wagtailimages_tags %}
 
-{% block body_class %}about-us{% endblock %}
+{% block body_class %}page--{{ page.category.slug }}{% endblock %}
 
 {% block content %}
 
