cats - add 'page--' prefix to  CategoryPage <body> class

--- a/libraries/blog/templates/blog/blog_page.html
+++ b/libraries/blog/templates/blog/blog_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body_class %}blog-page{% endblock %}
+{% block body_class %}page--blog-page{% endblock %}
 
 {% block content %}
 	<div class="wrapper wrapper--blog">
