--- a/libraries/categories/templates/categories/category_page.html
+++ b/libraries/categories/templates/categories/category_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body_class %}{{ page.slug }}{% endblock %}
+{% block body_class %}page--{{ page.slug }}{% endblock %}
 
 {% block content %}
     <div class="wrapper">
