--- a/libraries/libraries/static/scss/components/services/_service-row-item.scss
+++ b/libraries/libraries/static/scss/components/services/_service-row-item.scss
@@ -48,6 +48,12 @@
     margin: 0 0 8px;
     padding: 0 0 2px;
 
+    // stop RowComponent headings from inheriting generic link styles
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
     @include respond($break-medium) {
       padding: 0 0 5px;
     }
