--- a/libraries/search/templates/search/search-pagination.html
+++ b/libraries/search/templates/search/search-pagination.html
@@ -1,47 +1,42 @@
+{% load static wagtailcore_tags %}
+
 <div class="search-pagination">
-	<a
-		class="search-pagination__nav-item"
-		title="Go to the previous page"
-		href="#"
-	>
-		Prev
-	</a>
+	{% if search_results.has_previous %}
+		<a
+			class="search-pagination__nav-item"
+			title="Go to the previous page"
+			href="{% url 'search' %}?q={{ search_query|urlencode }}&amp;page={{ search_results.previous_page_number }}&searchType=services"
+		>
+			Prev
+		</a>
+	{% endif %}
 	<div class="search-pagination__numbers-wrapper">
 		<ul class="search-pagination__numbers">
 			<li class="search-pagination__text">
 				Page
 			</li>
-			<li class="search-pagination__number">
-				<a
-					href="#"
-					class="search-pagination__number-link search-pagination__number-link--is-active"
-				>1</a>
-			</li>
-			<li class="search-pagination__number">
-				<a
-					href="#"
-					class="search-pagination__number-link"
-				>2</a>
-			</li>
-			<li class="search-pagination__number">
-				<a
-					href="#"
-					class="search-pagination__number-link"
-				>3</a>
-			</li>
-			<li class="search-pagination__number">
-				<a
-					href="#"
-					class="search-pagination__number-link"
-				>4</a>
-			</li>
+			{% for page_num in search_results.paginator.page_range %}
+				<li class="search-pagination__number">
+					<a
+						href="{% url 'search' %}?q={{ search_query|urlencode }}&amp;page={{ page_num }}&searchType=services"
+						{# slugify is used to coerce page_num to a string #}
+						class="search-pagination__number-link
+						{% if page_num|slugify == request.GET.page %}
+							search-pagination__number-link--is-active
+						{% endif %}
+						"
+					>{{page_num}}</a>
+				</li>
+			{% endfor %}
 		</ul>
 	</div>
-	<a
-		class="search-pagination__nav-item search-pagination__nav-item--next"
-		title="Go to the next page"
-		href="#next"
-	>
-		Next
-	</a>
+	{% if search_results.has_next %}
+		<a
+			class="search-pagination__nav-item search-pagination__nav-item--next"
+			title="Go to the next page"
+			href="{% url 'search' %}?q={{ search_query|urlencode }}&amp;page={{ search_results.next_page_number }}&searchType=services"
+		>
+			Next
+		</a>
+	{% endif %}
 </div>
