staff - working staff app with templates

--- a/libraries/libraries/static/scss/components/services/_services.scss
+++ b/libraries/libraries/static/scss/components/services/_services.scss
@@ -1,5 +1,5 @@
 // ===================================
-// Services page contened (mainly a
+// Services page content (mainly a
 // wrapper)
 // ===================================
 
