--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -76,3 +76,6 @@
 @import 'components/services/service-row-item';
 @import 'components/services/service-row';
 @import 'components/services/services';
+
+// -- Staff List page
+@import 'components/staff/staff-list';
