--- a/libraries/staff/templates/staff/staff_list_page.html
+++ b/libraries/staff/templates/staff/staff_list_page.html
@@ -4,18 +4,18 @@
 
 {% block content %}
     <div class="wrapper wrapper--padding-top">
-        <h1 class="about-us-title">
-			{{ page.title }}
-		</h1>
+        <div class="wrapper wrapper--search wrapper--staff">
+            <h1 class="about-us-title">
+    			{{ page.title }}
+    		</h1>
 
-        <div class="about-us-content">
-            <div class="about-us-text-wrapper">
-                {% for staff_member in page.staff_members %}
-                    <div class="about-us-text">
+            <ul class="search-list">
+                {% for staff_member in page.staff_members.all %}
+                    <li class="search-result">
                         {% include 'staff/staff_member.html' %}
-                    </div>
+                    </li>
                 {% endfor %}
-            </div>
+            </ul>
         </div>
     </div>
 {% endblock %}
